Gif Overlay no longer has a bug on mobile since I moved it to the individual instance of the PortfolioItem component

--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,7 @@ html, body {
   opacity: 0.7;
   height: 100%;
   width: 100%;
-  z-index: -10;
+  z-index: -1;
 }
 
 .Work-Summary-Box {
